--- a/04 Intro CSS/textos.css
+++ b/04 Intro CSS/textos.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
+
 
 html{
     /*font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;*/
     /*font-family: 'Rubik Puddles', cursive;*/
+    font-family: 'Cherry Bomb One', cursive;   /*importar desde google*/ 
     font-size: larger;
     font-weight: 700;
     /*https://fonts.google.com/ url para importar font de google*/
