--- a/06-Selectores/css/pseudoelementos.css
+++ b/06-Selectores/css/pseudoelementos.css
@@ -1,42 +1,41 @@
 .contenedor {
-    width: 300px;
-    height: 100px;
-    background-color: aquamarine;
+  width: 300px;
+  height: 100px;
+  background-color: aquamarine;
 }
 
 span.frase {
-    font-style: italic;
+  font-style: italic;
 }
 
-span.frase::before{
-    content: '<<';
-    font-size: x-small;
+span.frase::before {
+  content: "<<";
+  font-size: x-small;
 }
 
-span.frase::after{
-    content: '>>';
-    font-size: x-small;
+span.frase::after {
+  content: ">>";
+  font-size: x-small;
 }
 
-.libro{
-    background-color: bisque;
-    padding: 15px;
-    font-family: Arial;
+.libro {
+  background-color: bisque;
+  padding: 15px;
+  font-family: Arial;
 }
-.libro p::first-letter{
-    font-size: xx-large;
-}
-
-.libro p::first-line{
-    color: white;
+.libro p::first-letter {
+  font-size: xx-large;
 }
 
-.libro p::selection{
-    color: white;
-    background-color: chocolate;
+.libro p::first-line {
+  color: white;
 }
 
-.listado li::marker{
-    color: red;
+.libro p::selection {
+  color: white;
+  background-color: chocolate;
 }
 
+.listado li::marker {
+  color: red;
+}
